# stockquote-rs

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs
src/: lib.rs  model.rs
