[package]
name = "stockquote"
version = "0.1.1"
authors = ["Huy Tran <hey@huy.rocks>"]
edition = "2018"
description = "Safe and easy to use stock quote library. All data coming from Yahoo Finance."
license-file = "LICENSE"
respository = "https://github.com/huytd/stockquote-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7", features = ["json"] }
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"

[dev-dependencies]
tokio = { version = "0.2.22", features = ["full"] }